[workspace]
members = [
    "packages/client-connector",
    "packages/control-plane",
    "packages/application-connector",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["OpenZTNA Contributors"]
license = "Apache-2.0"
repository = "https://github.com/openztna/client-connector"